k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sisvan-service
  namespace: sisvan
spec:
  type: NodePort
  selector:
    app: sisvan-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
